--- a/app/src/main/res/layout/activity_sign_up_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_page.xml
@@ -188,16 +188,16 @@
             android:layout_height="49dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
-            android:spinnerMode="dropdown"
-            android:prompt="@string/hint_role"
-            android:textAlignment="center"
             android:background="@color/white"
+            android:prompt="@string/hint_role"
+            android:spinnerMode="dropdown"
+            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName14"
             app:layout_constraintVertical_bias="0.046"
-            tools:ignore="MissingConstraints" />
+            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
