--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -13,7 +13,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
@@ -28,7 +27,7 @@
             android:textSize="64sp"
             android:textStyle="bold" />
 
-        <Space
+        <android.widget.Space
             android:layout_width="match_parent"
             android:layout_height="40dp" />
 
@@ -42,9 +41,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
+                android:layout_marginLeft="125dp"
                 android:layout_marginTop="100dp"
-                android:layout_marginLeft="120dp"
+                android:gravity="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textSize="70sp"
                 tools:text="10:00" />
@@ -58,9 +57,7 @@
 
         </RelativeLayout>
 
-
-
-        <Space
+        <android.widget.Space
             android:layout_width="match_parent"
             android:layout_height="20dp" />
 
@@ -102,6 +99,17 @@
 
         </LinearLayout>
 
+        <android.widget.Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp" />
+
+        <Button
+            android:id="@+id/timer_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Timer SETTINGS"
+            android:layout_gravity="center"
+            android:drawableLeft="@drawable/ic_baseline_settings_24"/>
 
     </LinearLayout>
 
